--- a/package.json
+++ b/package.json
@@ -3,22 +3,56 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@hookform/resolvers": "5.2.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "6.13.0",
+    "@testing-library/dom": "^10.4.1",
+    "axe-core": "^4.10.3",
+    "bcryptjs": "3.0.2",
+    "framer-motion": "12.23.12",
+    "jest-axe": "^10.0.0",
+    "jose": "^6.0.12",
+    "lucide-react": "0.537.0",
+    "next": "15.4.6",
+    "next-auth": "4.24.11",
+    "prisma": "6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "react-hook-form": "7.62.0",
+    "recharts": "3.1.2",
+    "tsx": "4.20.3",
+    "zod": "4.0.15",
+    "zustand": "5.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "6.6.4",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@typescript-eslint/eslint-plugin": "8.39.0",
+    "@typescript-eslint/parser": "8.39.0",
+    "@vitest/ui": "3.2.4",
+    "eslint": "9.32.0",
+    "eslint-config-next": "15.4.6",
+    "jsdom": "26.1.0",
+    "msw": "2.10.4",
+    "tailwindcss": "^4",
+    "typescript": "^5",
+    "vitest": "3.2.4"
   }
 }
