--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "test": "vitest",
+    "test": "vitest --config vitest.config.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
@@ -46,6 +46,7 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "8.39.0",
     "@typescript-eslint/parser": "8.39.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "3.2.4",
     "eslint": "9.32.0",
     "eslint-config-next": "15.4.6",
@@ -53,6 +54,7 @@
     "msw": "2.10.4",
     "tailwindcss": "^4",
     "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "3.2.4"
   }
 }
