--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "framework": "nextjs",
-  "installCommand": "pnpm install --no-frozen-lockfile",
-  "buildCommand": "next build"
+  "installCommand": "npm install",
+  "buildCommand": "npm run build"
 }
 
 
