--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "framework": "nextjs",
   "installCommand": "npm install",
-  "buildCommand": "npm run build"
+  "buildCommand": "npx prisma generate && npm run build"
 }
 
 
